Add changes to package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "moviedux",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
+    "file": "./src/utilities/color-generator.js",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
